Add wordpress core css. Add container layout

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -1,5 +1,9 @@
 // vendors
 @import "node_modules/bootstrap/scss/bootstrap";
+@import "vendors/wp";
+
+// base
+@import "base/base";
 
 // components
-@import "./components/header";
+@import "components/header";
