Add styling and fonts

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -1,9 +1,14 @@
 // vendors
 @import "node_modules/bootstrap/scss/bootstrap";
 @import "vendors/wp";
+@import "vendors/fonts";
 
 // base
+@import "base/variables";
 @import "base/base";
 
 // components
-@import "components/header";
+@import "components/post";
+
+// layout
+@import "layout/header";
