--- a/src/assets/scss/components/_post.scss
+++ b/src/assets/scss/components/_post.scss
@@ -46,16 +46,19 @@
     ul {
       list-style: none;
       margin: 0;
+      padding: 0;
       li {
         display: inline-block;
+        margin-bottom: 8px;
         a {
-          background-color: lightgray;
+          background-color: #f1f1f1;
           border-bottom: none;
           margin-right: 10px;
           padding: 5px 10px;
           display: inline-block;
           font-size: 14px;
-          color: darkgray;
+          color: #666;
+          text-decoration: none;
         }
       }
     }
