Adjust carousel, organise styles

--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -1,5 +1,11 @@
 // colours
 $primary-colour: lightgreen;
+$white: #ffffff;
+$black: #000000;
+$beige: #d9d1c6;
+$brown-fade: rgba(65, 56, 49, 0.8);
+$brown-back: #4a4038;
+$brown-text: #6d6460;
 
 // fonts
 $primary-font: "armataregular", "Helvetica Neue", Helvetica, Arial, sans-serif;
