--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -5,3 +5,21 @@ body {
 .navbar {
   background: $brown-fade;
 }
+
+.lists-homepage {
+  margin-bottom: 3rem;
+
+  h2 {
+    font-size: 1rem;
+    text-transform: uppercase;
+
+    &:after {
+      content: "";
+      display: block;
+      height: 1px;
+      width: 30px;
+      background: $black;
+      margin: 1rem 0;
+    }
+  }
+}
