Move scrollable lists into a component file, display page title on event page

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -10,8 +10,9 @@
 // components
 @import "components/post";
 @import "components/carousel";
+@import "components/scrollable";
 
 // layout
 @import "layout/header";
 @import "layout/footer";
-@import "layout/home";
+@import "layout/pages";
