Display date, time and location of event

--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -5,7 +5,7 @@ $black: #000000;
 $beige: #d9d1c6;
 $brown-fade: rgba(65, 56, 49, 0.8);
 $brown-back: #534b47;
-$brown-text: #6d6460;
+$brown-text: #4a4038;
 
 // fonts
 $primary-font: "armataregular", "Helvetica Neue", Helvetica, Arial, sans-serif;
