Add fullscreen nav menu, toggled to fade in and out

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -11,6 +11,7 @@
 @import "components/post";
 @import "components/carousel";
 @import "components/scrollable";
+@import "components/fullscreen";
 
 // layout
 @import "layout/header";
