Add manifesto modal

--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -4,6 +4,7 @@ $white: #ffffff;
 $black: #000000;
 $beige: #d9d1c6;
 $brown-fade: rgba(65, 56, 49, 0.8);
+$brown-dark: #413831;
 $brown-back: #534b47;
 $brown-text: #4a4038;
 
