--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -12,6 +12,7 @@
 @import "components/carousel";
 @import "components/scrollable";
 @import "components/fullscreen";
+@import "components/manifesto";
 
 // layout
 @import "layout/header";
