Make carousel 100%vh and tone down the ripple effect

--- a/src/assets/scss/components/_carousel.scss
+++ b/src/assets/scss/components/_carousel.scss
@@ -11,7 +11,7 @@
   background: #000 url(../images/gi-bg.jpg) center no-repeat;
   background-size: cover;
   color: $white;
-  height: 640px;
+  height: 100vh;
 
   .carousel-inner,
   .carousel-item,
