Move social menu to footer, add styling for footer menu

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -13,6 +13,7 @@
 @import "components/scrollable";
 @import "components/fullscreen";
 @import "components/manifesto";
+@import "components/social";
 
 // layout
 @import "layout/header";
