--- a/src/assets/scss/components/_post.scss
+++ b/src/assets/scss/components/_post.scss
@@ -138,6 +138,10 @@
   }
 }
 
+.single-project .c-post__content {
+  line-height: 1.8;
+}
+
 .project-subtitle {
   text-transform: uppercase;
   color: $white;
@@ -151,6 +155,24 @@
   line-height: 1.8;
 }
 
-.single-project .c-post__content {
-  line-height: 1.8;
+.project-partners {
+  background-color: $white;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px 0;
+
+  &__logo {
+    display: inline-block;
+    text-align: center;
+    flex-basis: 100%;
+    margin: 20px;
+
+    img {
+      max-height: 60px;
+    }
+
+    @media (min-width: 576px) {
+      flex-basis: calc(33.333% - 40px);
+    }
+  }
 }
