--- a/src/assets/scss/components/_post.scss
+++ b/src/assets/scss/components/_post.scss
@@ -208,3 +208,16 @@
     }
   }
 }
+
+.c-post__card {
+  background: $white;
+  padding: 20px;
+
+  h3 {
+    line-height: 1.5;
+  }
+
+  p {
+    margin: 0;
+  }
+}
