Display an alphabetical list of partners

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -14,6 +14,7 @@
 @import "components/fullscreen";
 @import "components/manifesto";
 @import "components/social";
+@import "components/glossary";
 
 // layout
 @import "layout/header";
