--- a/src/assets/scss/components/_post.scss
+++ b/src/assets/scss/components/_post.scss
@@ -138,7 +138,8 @@
   }
 }
 
-.single-project .c-post {
+.single-project .c-post,
+.single-partner .c-post {
   &__content {
     line-height: 1.8;
   }
@@ -146,6 +147,7 @@
   &__single-title {
     font-size: 1.125rem;
     font-weight: normal;
+    text-transform: uppercase;
 
     &:after {
       content: "";
