Move map styling into a separate file

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -15,6 +15,7 @@
 @import "components/manifesto";
 @import "components/social";
 @import "components/glossary";
+@import "components/map";
 
 // layout
 @import "layout/header";
