--- a/src/assets/scss/layout/_pages.scss
+++ b/src/assets/scss/layout/_pages.scss
@@ -49,7 +49,10 @@
 
   &__why,
   &__email,
-  &__website {
+  &__website,
+  &__facebook,
+  &__linkedin,
+  &__weibo {
     display: none;
   }
 }
@@ -87,10 +90,33 @@
     }
   }
 
-  .modal-email,
-  .modal-web {
-    display: block;
-    width: max-content;
+  .modal-info {
+    list-style-type: none;
+    margin-top: 2rem;
+    padding: 0;
+
+    a {
+      color: $white;
+    }
+  }
+
+  .modal-social {
+    list-style-type: none;
+    padding: 0;
+
+    li {
+      display: inline-block;
+    }
+
+    li a {
+      display: inline-block;
+      color: $white;
+      margin-right: 1rem;
+    }
+
+    li i {
+      font-size: 1.25rem;
+    }
   }
 }
 
