--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -2,6 +2,7 @@
 @import "node_modules/bootstrap/scss/bootstrap";
 @import "vendors/wp";
 @import "vendors/fonts";
+@import "vendors/fontawesome";
 
 // base
 @import "base/variables";
