--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -22,3 +22,7 @@
 @import "layout/header";
 @import "layout/footer";
 @import "layout/pages";
+@import "layout/project";
+@import "layout/event";
+@import "layout/about";
+@import "layout/card";
