Update styling of news articles

--- a/src/assets/scss/components/_post.scss
+++ b/src/assets/scss/components/_post.scss
@@ -47,9 +47,7 @@
   }
   &__footer {
     overflow: hidden;
-    border-top: 1px solid grey;
-    margin: 30px -20px -20px -20px;
-    padding: 20px;
+    margin: 2rem 0 0;
   }
   &__tags {
     margin-top: 16px;
