--- a/src/assets/scss/layout/_event.scss
+++ b/src/assets/scss/layout/_event.scss
@@ -4,6 +4,10 @@
       margin: 0;
       padding: 0;
       list-style: none;
+
+      @media (min-width: 768px) {
+        margin-top: 40px;
+      }
     }
     li {
       font-size: 1.125rem;
