Add form styling and conditional display

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -17,6 +17,7 @@
 @import "components/social";
 @import "components/glossary";
 @import "components/map";
+@import "components/form";
 
 // layout
 @import "layout/header";
