--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -1,5 +1,75 @@
 .wpcf7 {
   text-transform: uppercase;
+
+  input[type="checkbox"] {
+    margin-right: 0.5rem;
+  }
+
+  input[type="radio"] {
+    display: none;
+    visibility: hidden;
+    position: relative;
+  }
+
+  input[type="radio"] + span:before {
+    content: "";
+    position: relative;
+    display: inline-block;
+    width: 18px;
+    height: 18px;
+    background: transparent;
+    border: 4px solid $beige;
+    border-radius: 50%;
+    vertical-align: middle;
+    box-shadow: 0 0 0 2px $white;
+    margin-right: 0.625rem;
+    top: -2px;
+  }
+
+  input[type="radio"]:checked + span:before {
+    background: #000;
+  }
+}
+
+.wpcf7-form > p {
+  margin-bottom: 1.5rem;
+
+  &:nth-last-child(3) {
+    margin-bottom: 0;
+  }
+
+  &:nth-last-child(2) {
+    display: flex;
+    flex-direction: row;
+
+    .wpcf7-submit {
+      border: 0;
+      color: $white;
+      background: $brown-back;
+      text-transform: uppercase;
+      padding: 0.5rem 2rem;
+    }
+
+    @media (min-width: 768px) {
+      flex-direction: row-reverse;
+    }
+  }
+}
+
+.wpcf7-form > p > label {
+  width: 100%;
+
+  .wpcf7-form-control-wrap {
+    display: block;
+    margin-top: 0.25rem;
+  }
+
+  .wpcf7-form-control {
+    width: 100%;
+    background: transparent;
+    border: 2px solid $white;
+    padding: 0.5rem;
+  }
 }
 
 .wpcf7-radio,
@@ -8,12 +78,12 @@
     display: block;
     margin: 0;
   }
-
-  .wpcf7-list-item-label {
-    margin-left: 0.5rem;
-  }
 }
 
 .form-hidden-field {
   display: none;
+  width: 100%;
+  background: transparent;
+  border: 2px solid $white;
+  padding: 0.5rem;
 }
