Add copyright to footer

--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -54,3 +54,41 @@
     background: rgba(255, 255, 255, 0.75);
   }
 }
+
+.f-copyright {
+  display: flex;
+  align-items: center;
+  font-size: 0.75rem;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  flex-wrap: wrap-reverse;
+  margin-top: 1rem;
+
+  > div {
+    @media (max-width: 767px) {
+      width: 100%;
+    }
+  }
+
+  &__left {
+    a {
+      color: $white;
+    }
+
+    span:last-child {
+      margin-left: 1rem;
+    }
+  }
+
+  &__center {
+    display: none;
+    border-bottom: 1px solid $white;
+    margin: 0 20px;
+    opacity: 0.25;
+
+    @media (min-width: 768px) {
+      display: block;
+      flex-grow: 1;
+    }
+  }
+}
