--- a/src/assets/scss/components/_fullscreen.scss
+++ b/src/assets/scss/components/_fullscreen.scss
@@ -1,26 +1,37 @@
 #menu-fullscreen {
   display: block;
   position: fixed;
-  width: 100%;
+  width: 360px;
   height: 100%;
   top: 0;
-  left: 0;
+  left: -360px;
   overflow: hidden;
-  background-color: rgba($color: $beige, $alpha: 0.95);
+  background-color: $brown-dark;
   z-index: -1;
-  opacity: 0;
-  transition: opacity 0.5s ease;
-  padding: 2rem 0.625rem;
+  transition: left 0.25s ease-out;
+  padding: 2.5rem 0.625rem;
+}
+
+body.show-nav {
+  overflow-x: hidden;
 }
 
 .show-nav #menu-fullscreen {
   z-index: 9999;
-  opacity: 1;
+  left: 0;
 }
 
 .hide-nav #menu-fullscreen {
   z-index: 9999;
-  opacity: 0;
+}
+
+.site-wrap {
+  transition: transform 0.25s ease-out;
+}
+
+.show-nav .site-wrap {
+  transform: translateX(360px);
+  overflow-x: hidden;
 }
 
 .menu-close,
@@ -38,7 +49,7 @@
     left: 15px;
     height: 30px;
     width: 2px;
-    background-color: #333;
+    background-color: $white;
   }
 
   &:before {
@@ -56,11 +67,13 @@
 
 #menu-fullscreen .nav__search {
   max-width: 400px;
-  margin: 1.5rem 0 3rem;
+  margin: 3rem 0;
 
   form {
-    padding: 1rem;
-    background-color: #bdb7b0;
+    padding: 0.5rem;
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    border-radius: 0.25rem;
+    background-color: transparent;
   }
 
   label {
@@ -83,7 +96,7 @@
   margin-bottom: 3rem;
 
   a {
-    color: $brown-text;
+    color: $white;
     opacity: 0.6;
     transition: opacity 0.3s ease-out;
 
