--- a/src/assets/scss/components/_fullscreen.scss
+++ b/src/assets/scss/components/_fullscreen.scss
@@ -1,15 +1,20 @@
 #menu-fullscreen {
   display: block;
   position: fixed;
-  width: 360px;
-  height: 100%;
   top: 0;
   left: -360px;
+  width: 360px;
+  height: 100%;
   overflow: hidden;
   background-color: $brown-dark;
   z-index: -1;
   transition: left 0.25s ease-out;
   padding: 2.5rem 0.625rem;
+
+  @media (max-width: 575px) {
+    left: -100%;
+    width: 100%;
+  }
 }
 
 body.show-nav {
@@ -32,6 +37,10 @@ body.show-nav {
 .show-nav .site-wrap {
   transform: translateX(360px);
   overflow-x: hidden;
+
+  @media (max-width: 575px) {
+    transform: translateX(100%);
+  }
 }
 
 .menu-close,
