--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -5,6 +5,7 @@
   h4 {
     font-size: 1rem;
     line-height: 1.4;
+    font-weight: bold;
 
     &:after {
       content: "";
@@ -12,7 +13,16 @@
       height: 1px;
       width: 30px;
       background: $beige;
-      margin: 2rem 0 1.5rem;
+      margin: 1.5rem 0;
+    }
+  }
+
+  @media (max-width: 767px) {
+    .col-md-3 {
+      margin-bottom: 2rem;
+    }
+    .col-md-3:last-child {
+      margin-bottom: 0;
     }
   }
 }
