--- a/src/assets/scss/components/_manifesto.scss
+++ b/src/assets/scss/components/_manifesto.scss
@@ -1,25 +1,27 @@
 #manifesto {
-  display: block;
   position: fixed;
-  width: 100%;
-  height: 100%;
   top: 0;
   left: 0;
-  z-index: -1;
-  opacity: 0;
+  width: 100%;
+  height: 100%;
   color: $white;
   overflow-x: hidden;
-  transition: opacity 0.5s ease;
+  visibility: hidden;
+  z-index: -1;
+  opacity: 0;
+  transition: visibility 0.4s linear, opacity 0.4s ease;
 }
 
 .show-manifesto #manifesto {
   z-index: 9999;
   opacity: 1;
+  visibility: visible;
 }
 
 .hide-manifesto #manifesto {
   z-index: 9999;
   opacity: 0;
+  visibility: hidden;
 }
 
 .m__wrapper {
