--- a/src/assets/scss/layout/_pages.scss
+++ b/src/assets/scss/layout/_pages.scss
@@ -32,3 +32,9 @@
     text-decoration: underline;
   }
 }
+
+.wp-block-columns {
+  .wp-block-column:not(:last-child) {
+    margin-bottom: 28px;
+  }
+}
