--- a/src/assets/scss/layout/_project.scss
+++ b/src/assets/scss/layout/_project.scss
@@ -36,7 +36,7 @@
   &__logo {
     display: inline-block;
     text-align: center;
-    flex-basis: 100%;
+    flex-basis: calc(50% - 40px);
     margin: 20px;
 
     img {
