Update font size of language toggle

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -112,6 +112,10 @@ body {
   a {
     text-decoration: none;
   }
+
+  a[lang="en-US"] {
+    font-size: 0.75rem;
+  }
 }
 
 @media (max-width: 1000px) {
