--- a/src/assets/scss/components/_carousel.scss
+++ b/src/assets/scss/components/_carousel.scss
@@ -30,3 +30,10 @@
   text-align: center;
   letter-spacing: -2px;
 }
+
+.carousel-indicators li {
+  border-radius: 50%;
+  width: 10px;
+  height: 10px;
+  margin: 10px;
+}
