--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -40,13 +40,6 @@ body {
       height: 50px;
     }
   }
-
-  .nav__btn {
-    img {
-      max-width: 30px;
-      height: auto;
-    }
-  }
 }
 
 @media (min-width: 576px) {
@@ -60,11 +53,68 @@ body {
   }
 }
 
+.menu-btn {
+  position: fixed;
+  top: 2rem;
+  left: 1.5rem;
+  z-index: 9999;
+}
+
+.nav__btn {
+  position: relative;
+  display: block;
+  transition: all 0ms 300ms;
+  background: transparent;
+  width: 30px;
+  height: 30px;
+
+  &:before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 10px;
+    width: 30px;
+    height: 1px;
+    background: rgba(255, 255, 255, 1);
+    transition: bottom 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
+      transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  &:after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 10px;
+    width: 30px;
+    height: 1px;
+    background: rgba(255, 255, 255, 1);
+    transition: top 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1),
+      transform 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+}
+
+.nav__btn.animate {
+  &:before {
+    bottom: 15px;
+    transform: rotate(-45deg);
+    transition: bottom 300ms cubic-bezier(0.23, 1, 0.32, 1),
+      transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+
+  &:after {
+    top: 15px;
+    transform: rotate(45deg);
+    transition: top 300ms cubic-bezier(0.23, 1, 0.32, 1),
+      transform 300ms 300ms cubic-bezier(0.23, 1, 0.32, 1);
+  }
+}
+
 .nav__manifesto {
   text-transform: uppercase;
   padding: 0 1.5rem;
   font-size: 0.75rem;
   letter-spacing: 1px;
+  margin-left: 4rem;
 }
 
 .nav__search {
@@ -133,7 +183,7 @@ body {
   .nav__wrapper {
     .nav__logo {
       padding: 0;
-      margin: 0;
+      margin: 0 0 0 3.5rem;
       order: 1;
       flex-grow: 1;
     }
