--- a/src/assets/scss/components/_manifesto.scss
+++ b/src/assets/scss/components/_manifesto.scss
@@ -47,20 +47,24 @@
 }
 
 .m__close {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: relative;
+  display: inline-block;
   margin-bottom: 4rem;
+  left: 50%;
+  transform: translateX(-50%);
+  cursor: pointer;
 
   p {
     text-transform: uppercase;
     font-size: 0.625rem;
     letter-spacing: 2px;
+    text-align: center;
+    margin-bottom: 0;
   }
 }
 
 .m__btn {
-  margin-bottom: 0.5rem;
+  margin: 0 auto 0.5rem;
 
   &:before,
   &:after {
