Update brown colours

--- a/src/assets/scss/components/_form.scss
+++ b/src/assets/scss/components/_form.scss
@@ -45,7 +45,7 @@
     .wpcf7-submit {
       border: 0;
       color: $white;
-      background: $brown-back;
+      background: $brown-dark;
       text-transform: uppercase;
       padding: 0.5rem 2rem;
     }
