--- a/src/assets/scss/layout/_card.scss
+++ b/src/assets/scss/layout/_card.scss
@@ -13,7 +13,7 @@
   }
   &__card-info {
     color: $white;
-    background: $brown-text;
+    background: $brown-dark;
     padding: 15px 20px;
     font-size: 0.875rem;
     ul {
