--- a/src/assets/scss/base/_variables.scss
+++ b/src/assets/scss/base/_variables.scss
@@ -1,12 +1,11 @@
 // colours
-$primary-colour: lightgreen;
 $white: #ffffff;
 $black: #000000;
-$beige: #d9d1c6;
-$brown-fade: rgba(65, 56, 49, 0.8);
-$brown-dark: #413831;
-$brown-back: #534b47;
-$brown-text: #4a4038;
+$beige: #e7e1da;
+$brown-navbar: rgba(65, 56, 49, 0.8);
+$brown-footer: #524b47;
+$brown-dark: #4a4038;
+$brown-link: #956b52;
 
 // fonts
 $primary-font: "armataregular", "Helvetica Neue", Helvetica, Arial, sans-serif;
