--- a/src/assets/scss/layout/_pages.scss
+++ b/src/assets/scss/layout/_pages.scss
@@ -1,8 +1,21 @@
 .page {
   line-height: 1.8;
+
+  main a {
+    color: $brown-link;
+
+    &:hover {
+      color: #745340;
+    }
+  }
 }
 
 .page__title {
+  font-size: 2rem;
+  text-transform: uppercase;
+}
+
+.page__subtitle {
   font-size: 1rem;
   text-transform: uppercase;
 
@@ -16,8 +29,29 @@
   }
 }
 
+.sub-white,
+.sub-white-line {
+  color: $white;
+  font-size: 1.25rem;
+  text-transform: uppercase;
+  margin-bottom: 0;
+}
+
+.sub-white-line {
+  margin-bottom: 1.5rem;
+
+  &:after {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 35px;
+    background: $black;
+    margin: 1rem 0;
+  }
+}
+
 .page__header {
-  margin-bottom: 3rem;
+  margin-bottom: 4rem;
 }
 
 .search-results {
