--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -13,8 +13,12 @@
       height: 1px;
       width: 30px;
       background: $beige;
-      margin: 1.5rem 0;
+      margin: 1.5rem 0 1rem;
     }
+  }
+
+  .textwidget {
+    font-size: 0.875rem;
   }
 
   @media (max-width: 767px) {
@@ -30,6 +34,7 @@
 #menu-footer {
   padding: 0;
   list-style: none;
+  font-size: 0.875rem;
   text-transform: uppercase;
 
   a {
@@ -47,6 +52,7 @@
   input[type="email"] {
     border: 0;
     padding: 0.375rem 0.5rem;
+    margin-right: 0.25rem;
     font-size: 0.875rem;
     color: $white;
     background: rgba(255, 255, 255, 0.25);
