--- a/src/assets/scss/layout/_pages.scss
+++ b/src/assets/scss/layout/_pages.scss
@@ -11,8 +11,17 @@
 }
 
 .page__title {
-  font-size: 2rem;
+  font-size: 1rem;
   text-transform: uppercase;
+
+  &:after {
+    content: "";
+    display: block;
+    height: 1px;
+    width: 40px;
+    background: $black;
+    margin: 1rem 0;
+  }
 }
 
 .page__subtitle {
@@ -23,7 +32,7 @@
     content: "";
     display: block;
     height: 1px;
-    width: 35px;
+    width: 40px;
     background: $black;
     margin: 1rem 0;
   }
