--- a/src/assets/scss/components/_post.scss
+++ b/src/assets/scss/components/_post.scss
@@ -138,16 +138,32 @@
   }
 }
 
+.flex-items {
+  display: flex;
+  flex-direction: column;
+  align-items: baseline;
+
+  p {
+    margin-bottom: 0;
+  }
+
+  @media (min-width: 768px) {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+
 .share-buttons {
   list-style-type: none;
   text-align: left;
   padding: 0;
-  margin-top: 2rem;
+  margin: 2rem 0 0;
 
   &:before {
     content: "Share";
     display: inline-block;
     margin-right: 1rem;
+    font-size: 0.9375rem;
   }
 
   li {
