--- a/src/assets/scss/components/_post.scss
+++ b/src/assets/scss/components/_post.scss
@@ -76,13 +76,13 @@
     margin: 0 0 20px 0;
   }
   &__thumbnail img {
-    max-width: 100%;
+    width: 100%;
     height: auto;
   }
   &__thumbnail,
   &__gallery,
   &__video {
-    background-color: lightgray;
+    background-color: black;
     text-align: center;
   }
   &__excerpt {
