Add custom font size file to bundle

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -1,6 +1,7 @@
 // vendors
 @import "node_modules/bootstrap/scss/bootstrap";
 @import "vendors/wp";
+@import "vendors/type";
 @import "vendors/fonts";
 @import "vendors/fontawesome";
 
