--- a/src/assets/scss/layout/_card.scss
+++ b/src/assets/scss/layout/_card.scss
@@ -18,6 +18,10 @@
       margin: 0;
       line-height: 1.6;
     }
+
+    .read-more-link {
+      margin-top: 0.875rem;
+    }
   }
   &__card-info {
     color: $white;
