--- a/src/assets/scss/layout/_card.scss
+++ b/src/assets/scss/layout/_card.scss
@@ -26,19 +26,18 @@
   &__card-info {
     color: $white;
     background: $brown-dark;
-    padding: 15px 20px;
+    padding: 0.875rem 1.25rem;
     font-size: 0.875rem;
+
     ul {
       margin: 0;
       padding: 0;
       list-style: none;
     }
+
     li {
-      font-size: 1rem;
       text-transform: uppercase;
-    }
-    li:last-child {
-      opacity: 0.5;
+      display: inline-block;
     }
   }
 }
