--- a/src/assets/scss/components/_glossary.scss
+++ b/src/assets/scss/components/_glossary.scss
@@ -1,4 +1,6 @@
 .glossary {
+  display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
   padding: 0;
 
@@ -6,6 +8,10 @@
     font-size: 1.125rem;
     font-weight: bold;
     margin-bottom: 1.5rem;
+  }
+
+  > li {
+    width: 50%;
   }
 }
 
