--- a/src/assets/scss/components/_post.scss
+++ b/src/assets/scss/components/_post.scss
@@ -50,7 +50,6 @@
     margin: 2rem 0 0;
   }
   &__tags {
-    margin-top: 16px;
     ul {
       list-style: none;
       margin: 0;
@@ -59,6 +58,7 @@
         display: inline-block;
         margin-bottom: 8px;
         a {
+          text-transform: uppercase;
           background-color: #f1f1f1;
           border-bottom: none;
           margin-right: 10px;
@@ -115,8 +115,7 @@
   }
 
   &__single-title {
-    font-size: 1.125rem;
-    font-weight: normal;
+    font-size: 1.25rem;
     text-transform: uppercase;
 
     &:after {
