--- a/src/assets/scss/components/_scrollable.scss
+++ b/src/assets/scss/components/_scrollable.scss
@@ -61,6 +61,10 @@
     font-size: 1.25rem;
     font-weight: bold;
     line-height: 1.4;
+
+    &:hover {
+      color: $white;
+    }
   }
 
   .lists-link {
