--- a/src/assets/scss/components/_social.scss
+++ b/src/assets/scss/components/_social.scss
@@ -6,13 +6,21 @@
   li {
     display: inline-block;
 
-    a {
+    button {
+      background: transparent;
+      border: 0;
+      padding: 0;
+    }
+
+    a,
+    button {
       color: $white;
       opacity: 0.6;
       transition: opacity 0.2s ease-out;
     }
 
-    a:hover {
+    a:hover,
+    button:hover {
       opacity: 1;
     }
 
