--- a/src/assets/scss/layout/_event.scss
+++ b/src/assets/scss/layout/_event.scss
@@ -4,14 +4,14 @@
       margin: 0;
       padding: 0;
       list-style: none;
-
-      @media (min-width: 768px) {
-        margin-top: 40px;
-      }
     }
     li {
-      font-size: 1.125rem;
-      margin-bottom: 0.125rem;
+      display: inline-block;
+    }
+    li + li:before {
+      content: "|";
+      margin: 0 4px;
+      display: inline-block;
     }
   }
   &__event-table table {
@@ -24,14 +24,21 @@
   }
 }
 
-.event-section {
-  @media (max-width: 767px) {
+@media (max-width: 767px) {
+  .event-section {
     flex-direction: column;
   }
 }
 
 #qrcode {
+  background-color: #fff;
   margin: 0 1.25rem 1.25rem 0;
+  padding: 30px;
+
+  img {
+    max-width: 180px;
+    height: auto;
+  }
 }
 
 .table-event {
