--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -33,7 +33,6 @@ body {
   .nav__logo {
     margin-left: auto;
     margin-right: auto;
-    padding-left: 140px;
 
     img {
       width: auto;
@@ -170,12 +169,18 @@ body {
     list-style-type: none;
   }
 
-  a {
-    text-decoration: none;
+  li.active,
+  li.current-lang {
+    display: none;
   }
 
-  a[lang="en-US"] {
+  li.lang-item-first a {
     font-size: 0.75rem;
+    text-transform: uppercase;
+  }
+
+  a {
+    text-decoration: none;
   }
 }
 
