--- a/src/assets/scss/layout/_project.scss
+++ b/src/assets/scss/layout/_project.scss
@@ -1,10 +1,10 @@
-.project-subtitle {
-  text-transform: uppercase;
-  color: $white;
-  font-weight: bold;
-  letter-spacing: 2px;
-  margin-bottom: 0.5rem;
-}
+// .project-subtitle {
+//   text-transform: uppercase;
+//   color: $white;
+//   font-weight: bold;
+//   letter-spacing: 2px;
+//   margin-bottom: 0.5rem;
+// }
 
 .project-subtitle,
 .project-content {
@@ -13,38 +13,40 @@
 
 .project-date p {
   position: relative;
-  font-size: 1.125rem;
   margin: 0;
-
-  &:after {
-    content: "";
-    position: absolute;
-    right: 0;
-    height: 1px;
-    width: 35px;
-    background: $black;
-    margin: 1rem 0;
-  }
 }
 
 .project-partners {
-  background-color: $white;
   display: flex;
   flex-wrap: wrap;
-  padding: 20px 0;
 
   &__logo {
-    display: inline-block;
-    text-align: center;
-    flex-basis: calc(50% - 40px);
-    margin: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-basis: calc(50% - 10px);
+    margin: 1.25rem;
 
     img {
-      max-height: 60px;
+      max-width: 160px;
+      max-height: 80px;
     }
+  }
+}
 
-    @media (min-width: 576px) {
-      flex-basis: calc(33.333% - 40px);
+@media (min-width: 992px) {
+  .project-partners__logo {
+    flex-basis: 160px;
+    margin-right: 30px;
+
+    &:last-child {
+      margin-right: 0;
     }
+  }
+}
+
+@media (max-width: 991px) {
+  .project-partners {
+    justify-content: space-between;
   }
 }
