--- a/src/assets/scss/layout/_single.scss
+++ b/src/assets/scss/layout/_single.scss
@@ -1,5 +1,21 @@
-.single-post {
+.single-post,
+.single-event,
+.single-project {
   .c-post__thumbnail {
-    margin-bottom: 3rem;
+    margin-bottom: 1.5rem;
   }
+}
+
+blockquote {
+  font-size: 1.25rem;
+  color: #333;
+}
+
+article.c-post h4 {
+  text-transform: uppercase;
+  color: #000;
+  font-size: 0.9375rem;
+  font-weight: 400;
+  line-height: 1.8;
+  letter-spacing: 1px;
 }
