--- a/src/assets/scss/components/_glossary.scss
+++ b/src/assets/scss/components/_glossary.scss
@@ -15,6 +15,12 @@
   }
 }
 
+@media (min-width: 992px) {
+  .glossary > li {
+    width: 25%;
+  }
+}
+
 .glossary-items {
   padding: 0;
   list-style-type: none;
