--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -32,7 +32,8 @@
   }
 }
 
-#menu-footer {
+#menu-footer,
+#menu-footer-cn {
   padding: 0;
   list-style: none;
   font-size: 0.875rem;
@@ -43,7 +44,7 @@
   }
 
   li {
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.125rem;
   }
 }
 
