Ensure pagination is block and full-width

--- a/src/assets/scss/layout/_pages.scss
+++ b/src/assets/scss/layout/_pages.scss
@@ -117,6 +117,12 @@
   }
 }
 
+.navigation.pagination {
+  display: block;
+  width: 100%;
+  padding: 0 15px;
+}
+
 .pagination .page-numbers {
   display: inline-block;
   background: #f1f1f1;
