Minor tweak to footer menu

--- a/src/assets/scss/layout/_footer.scss
+++ b/src/assets/scss/layout/_footer.scss
@@ -36,6 +36,7 @@
 #menu-footer-cn {
   padding: 0;
   list-style: none;
+  line-height: 1.7;
   font-size: 0.875rem;
   text-transform: uppercase;
 
