Add styling and function for custom category dropdown

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -19,6 +19,7 @@
 @import "components/glossary";
 @import "components/map";
 @import "components/form";
+@import "components/dropdown";
 
 // layout
 @import "layout/header";
