Use CDN for fontawesome instead of importing the entire css

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -3,7 +3,7 @@
 @import "vendors/wp";
 @import "vendors/type";
 @import "vendors/fonts";
-@import "vendors/fontawesome";
+// @import "vendors/fontawesome";
 
 // base
 @import "base/variables";
